--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,3 +1,4 @@
-<% @players.each do |player| %>
-  <%= player.name %>
-<% end %>
+<h1>All Players</h1>
+  <% @players.each do |player| %>
+    <%= player.name %>: <%= player.status %><br/>
+  <% end %>
