--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All Teams in the Race</h1><br/>
+<h1>All Teams in the Playoff Race</h1><br/>
   <div>
     <% @teams.each do |team| %>
     <h4><%= team.name %><br/></h4>
