--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All Players</h1>
+<h1>All Players in the Playoff Race</h1>
   <% @players.each do |player| %>
-    <%= player.name %>: <%= player.status %><br/>
+    <%= player.name %>: <%= player.status %> with <%= player.teams.first.name %><br/>
   <% end %>
