--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,4 +1,5 @@
 <h1>All Players in the Playoff Race</h1>
   <% @players.each do |player| %>
     <%= player.name %>: <%= player.status %> with <%= player.teams.first.name %><br/>
+    Current Coach: <%= player.coaches.name %>
   <% end %>
