--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Teams in the Playoff Race</h1><br/>
   <div>
     <% @teams.each do |team| %>
-      <h4><%= link_to team.name, team_path(team.id) %><br/></h4>
+      <h4><%= link_to team.name, team_path(team.name) %><br/></h4>
     <% end %>
   </div>
