--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,8 +1,12 @@
 <h1><%= @team.name %></h1><br/>
-  Team State: <%= @team.state_or_province %><br/>
-  Current_Players:  <% @team.players.each do |player| %><br/>
-                      <%= link_to player.name, player_path(player.id) %><br/>
+  City and State: <%= @team.city %>, <%= @team.state_or_province %><br/>
+  Current Players:  <% @team.current_players.each do |current_player| %><br/>
+                      <%= link_to current_player.name, player_path(current_player.id) %><br/>
                     <% end %>
-  Current_Coaches:  <% @team.coaches.each do |coach| %><br/>
-                      <%= link_to coach.name %>
+  Current Head Coach:  <%= link_to @team.current_coach.name %><br/>
+
+                      <%#= add asst coaches: link_to current_coach.name %>
+                    <%# end %>
+  Previous Players: <% @team.previous_players.each do |previous_player| %>
+                      <%= link_to previous_player.name %>
                     <% end %>
