--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,6 +1,4 @@
 <h1><%= @player.name %></h1>
     <%= @player.status %> with <%= @player.teams.first.name %><br/>
-    Current Coaching Staff: <%= @player.teams.first.coaches.first.name %><br>
-    Previous Head Coaches: <% @player.coaches.each do |coach| %>
-                            <%= coach.name %>
-                            <% end %>
+    Current Coaching Staff: <%= @player.current_coach.name %><br>
+    Previous Head Coaches: <%= @player.previous_coach.name %>
