--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <%= link_to "Teams", teams_path  %><br/>
     <%= link_to "Create User", new_user_path(current_user) %><br/>
     <%= link_to "Edit Coaches", coaches_path %><br/>
-    <%= link_to "Edit Players", players_path %><br/>
+    <%= link_to "Create Player" %> or <%= link_to "Edit Player", players_path %><br/>
     <%= link_to "Edit Teams", teams_path %><br/>
   <% else %>
     <%= link_to "Teams", teams_path  %>
