--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -1,4 +1,6 @@
 <h1><%= @coach.name %></h1>
+
+Current Team: <%= @coach.current_team %><br/>
 Current Players:  <% @coach.current_players.each do |player|  %>
                     <%= link_to player.name, player_path(player.slug) %>
                   <% end %><br/>
